# eros-engine

./: .dockerignore  .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md  fly.toml  openapi.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-docker.yml
crates/eros-engine-core/: Cargo.toml  README.md
crates/eros-engine-core/src/: affinity.rs  ghost.rs  lib.rs  pde.rs  persona.rs  scope.rs  types.rs
crates/eros-engine-llm/: Cargo.toml  README.md
crates/eros-engine-llm/src/: byte_bpe.rs  error.rs  lib.rs  model_config.rs  openrouter.rs  stream_scrub.rs  voyage.rs
crates/eros-engine-server/: Cargo.toml  openapi.json
crates/eros-engine-server/src/: error.rs  main.rs  memory_hygiene.rs  middleware.rs  openapi.rs  prompt.rs  prompt_log.rs  repetition.rs  state.rs
crates/eros-engine-server/src/auth/: middleware.rs  mod.rs  s2s.rs  supabase.rs
crates/eros-engine-server/src/pipeline/: dreaming.rs  handlers.rs  mod.rs  post_process.rs  snapshot.rs  story.rs  stream.rs  sync.rs  voice.rs  world.rs  world_town.rs
crates/eros-engine-server/src/routes/: companion.rs  companion_stream.rs  debug.rs  dto.rs  health.rs  mod.rs  s2s.rs  voice.rs  world_town.rs
crates/eros-engine-server/src/routes/bff/: affinity.rs  companion.rs  mod.rs
crates/eros-engine-store/: Cargo.toml  README.md
crates/eros-engine-store/migrations/: 0000_schema.sql  0001_chat.sql  0002_affinity.sql  0003_memory.sql  0004_persona.sql  0005_insights.sql  0006_memory_category.sql  0007_session_classified_at.sql  0008_session_classification_claim.sql  0009_wallet_links.sql  0010_persona_ownership.sql  0011_persona_genome_asset_id.sql  0012_chat_streaming.sql  0013_supabase_lockdown.sql  0014_affinity_effective_deltas.sql  0015_human_insights.sql  0016_lockdown_sqlx_migrations.sql  0017_drop_chat_extracted_facts.sql  0018_backfill_human_insights.sql  0019_chat_tip_marker_and_filter_audit.sql  0020_error_handling_config.sql  0021_companion_insights_snapshot.sql  0022_filter_triggers_wipe_legacy_shape.sql  0023_drop_nft_ownership_stack.sql  0024_persona_genomes_chat_data_only.sql  0025_insight_events_and_audit_cols.sql  0026_human_insights_geo.sql  0027_drop_legacy_gift_user_rows.sql  0028_companion_decision_events.sql  0029_affinity_bond_chemistry.sql  0030_chat_messages_channel.sql  0031_chat_sessions_channel.sql  0032_companion_memories_metadata.sql  0033_human_insights_profile_expansion.sql  0034_chat_messages_channel_product_qa.sql  0035_world_memories.sql  0036_world_town.sql  0037_world_town_reply_window.sql  0038_world_stories.sql
crates/eros-engine-store/src/: affinity.rs  chat.rs  decision.rs  error_handling.rs  human_insight.rs  insight.rs  lib.rs  memory.rs  ownership.rs  persona.rs  pool.rs  pubkey.rs  story.rs  sync_cursors.rs  wallets.rs  world.rs  world_town.rs
docker/: Dockerfile
docs/: affinity-model.md  affinity-model.zh.md  api-reference.md  api-reference.zh.md  architecture.md  architecture.zh.md  deploying.md  deploying.zh.md  ghost-mechanics.md  ghost-mechanics.zh.md  llm-audit.md  llm-audit.zh.md  memory-layers.md  memory-layers.zh.md  model-config.md  model-config.zh.md  prompt-traits.md  prompt-traits.zh.md  world-system.md  world-system.zh.md
docs/spec/: image-iteration-and-aspect.md
docs/superpowers/plans/: 2026-05-13-marketplace-ownership-gate.md
docs/superpowers/specs/: 2026-05-13-marketplace-ownership-gate-design.md  2026-05-18-prompt-traits-injection-design.md  2026-05-19-openrouter-audit-design.md  2026-05-19-sse-streaming-chat-0.2-design.md  2026-05-19-v0.1.3-fallback-array-and-usage-filter-design.md  2026-05-20-affinity-event-delta-design.md  2026-05-20-history-latency-cuts-design.md  2026-05-20-six-axis-affinity-activation-design.md  2026-05-21-human-insights-matching-table-design.md  2026-05-21-openrouter-audit-non-chat-tasks-design.md  2026-05-21-tier-based-chat-model-design.md  2026-05-22-chat-reasoning-control-design.md  2026-05-23-chat-start-resolve-latency-design.md  2026-05-23-model-spec-rr-weighted-design.md  2026-05-24-memory-affinity-scope-flags-design.md  2026-05-24-prompt-prefix-reorder-design.md  2026-05-25-chat-output-filter-design.md  2026-05-25-model-name-display-override-design.md  2026-05-26-error-fallback-config-design.md  2026-05-26-filter-validity-gate-design.md  2026-05-26-prompt-enhance-and-scope-persist-design.md  2026-05-26-tip-role-and-filter-audit-design.md  2026-05-26-tips-stream-reply-design.md  2026-05-29-engine-cleanup-and-snapshot-design.md  2026-06-01-persona-genomes-chat-data-only-design.md  2026-06-02-chat-input-filter-design.md  2026-06-02-chat-vision-image-input-design.md  2026-06-03-cleanup-legacy-gift-user-rows-design.md  2026-06-03-extraction-enable-disable-design.md  2026-06-03-extraction-geo-and-config-prompts-design.md  2026-06-03-insight-events-and-audit-columns-design.md  2026-06-03-remove-legacy-gift-event-design.md  2026-06-03-tip-parrot-fix-and-run-stream-e2e-design.md  2026-06-04-llm-based-pde-design.md  2026-06-12-provider-exclusion-garble-guard-design.md  2026-06-13-companion-reply-quality-design.md  2026-06-23-pde-persona-and-structured-output-design.md  2026-06-23-reply-image-executor-design.md  2026-06-24-image-only-output-models-design.md  2026-06-26-pde-image-availability-context-design.md  (+25 more)
examples/: model_config.toml  model_config.toml.example
examples/personas/: aria.toml  kenji.toml  miel.toml
