[package]
name = "eros-engine-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eros-engine-core = { path = "../eros-engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
